--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.4.3",
     "babel-plugin-macros": "^3.1.0",
+    "npm-check-updates": "^16.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "swiper": "^8.4.5",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
+    "update": "ncu -u",
+    "postinstall": "link-module-alias",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "_moduleAliases": {
+    "images": "./src/design-system/shared/assets"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "link-module-alias": "^1.2.0"
   }
 }
